# dropout-predictor

./: README.md  pyproject.toml
data/interim/: column_dict.json  edit_column_dict.json  temp.json
data/processed/: X_cat.csv  X_id.csv  X_num.csv  data.csv  y.csv
data/raw/: violence.csv
dropout-predictor/: Makefile  README.md
dropout-predictor/dropout_predictor/: __init__.py  dataset.py  features.py  plots.py
dropout-predictor/dropout_predictor/modeling/: predict.py
dropout-predictor/notebooks/: 1.0-ga-data-cleaning.ipynb
models/: catboost_best_model.cbm  kmeans_plus_predictions.csv
notebooks/: 1.0-ga-data-cleaning.ipynb  2.0-ga-diagnostics.ipynb  3.0-ga-models.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/modeling/: train.py
